# agent

./: README.md  langgraph.json  pyproject.toml
notebooks/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag.ipynb  06-chaining.ipynb  07-structured_output.ipynb  08-tools.ipynb  notebook.ipynb
src/agents/: agent.py  main.py  rag.py  rag_avanzado.py  simple.py  state.py
src/agents/nodes/: booking.py  conversation.py  extractor.py  rag.py  route.py
src/agents/tools/: rag.py
